0.4:
- Major changes in method of initializing desktop PulpCore instance
- PulpCore can be display in freely JPanel (CoreDisplayPanel)

0.3:
- Simpler window size setting
- Moved packages/classes from pl.graniec.pulpcore.* to pl.graniec.coralreef.pulpcore.*

0.2:
- Now it's dependent of newer pulpcore version (0.11.5)